# uwi-msbm-gender-chatbot-monorepo

./: .cursorrules  .env.production  .gitignore  README.md  Requirements.txt  index.html  package-lock.json  package.json  pyproject.toml  render.json  render.yaml  start.sh  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
public/: _redirects
src/: App.tsx  index.css
src/components/: ArticleCard.tsx  FeatureCard.tsx  Footer.tsx  Navbar.tsx
src/components/ui/: multi-select.tsx
src/pages/: About.tsx  Chat.tsx  Index.tsx  NotFound.tsx  Search.tsx
src/server/api/: main.py
src/server/api/routers/: chat_route.py  keyword_search_route.py
src/server/core/: config.py  logging.py
src/server/data/: topics.json  topics_singleword_keywords.json
src/server/models/: article_model.py  chat_model.py
src/server/service/: astra_service.py  chat_service.py  embedding_service.py  llm_service.py  search_service.py
src/server/service/news_articles/: news_article_categoriser.py  news_article_collector.py  news_article_summariser.py  news_article_updater.py
src/server/service/vectorstore/: vector_store_updater.py
